(2022/03/25)数値データの特徴量化(スケーリング/正規化，交互作用特徴量の生成)について理解する

--- a/FeatureValueConversion.ipynb
+++ b/FeatureValueConversion.ipynb
@@ -81,7 +81,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fc66596fe80>"
+       "<matplotlib.image.AxesImage at 0x7fefd00cefd0>"
       ]
      },
      "execution_count": 2,
@@ -116,7 +116,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fc6619088b0>"
+       "<matplotlib.image.AxesImage at 0x7fefcc0689d0>"
       ]
      },
      "execution_count": 3,
@@ -443,7 +443,175 @@
    "id": "293f54c3",
    "metadata": {},
    "source": [
-    "### 正規化(Min-Max normalization)"
+    "### 正規化(Min-Max normalization)\n",
+    "\n",
+    "「正規化」と一言で言っても文脈に応じて様々な意味がある．今回はスケーリングにおけるMin-Max normalizationとして取り扱う．\n",
+    "\n",
+    "正規化では，データの値を閉区間$[0,1]$の間に補正する．言い換えると，すべてのデータの値が0以上1以下となるように値を変換する．変換後の値は以下のような式で算出される．\n",
+    "\n",
+    "\\begin{eqnarray}\n",
+    "\\hat{x}_i = \\frac{x_i-x_{min}}{x_{max}-x_{min}}\n",
+    "\\end{eqnarray}\n",
+    "\n",
+    "ここで添え字$i$はi番目の値を表し，$x_{max},x_{min}$はそれぞれその値の中の最大値と最小値を表す．\n",
+    "\n",
+    "正規化を行う際の注意点として，外れ値の存在が挙げられる．変換に直接最大値と最小値を用いているため，極端に大きい(小さい)値が存在すると，正規化後の値はそれらの影響を受けやすい．正規化はある程度データのバラツキが均質である場合に用いるのが適切だろう．\n",
+    "\n",
+    "正規化の実装には，直接上記の計算式を記述しても良いが，scikit-learnのクラスを用いると簡単である．"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "216ee4a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Column1</th>\n",
+       "      <th>Column2</th>\n",
+       "      <th>Column3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.548814</td>\n",
+       "      <td>-0.335208</td>\n",
+       "      <td>0.602763</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.544883</td>\n",
+       "      <td>-0.858836</td>\n",
+       "      <td>0.645894</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.437587</td>\n",
+       "      <td>-0.114544</td>\n",
+       "      <td>0.963663</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.383442</td>\n",
+       "      <td>-0.233541</td>\n",
+       "      <td>0.528895</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.568045</td>\n",
+       "      <td>-0.077317</td>\n",
+       "      <td>0.071036</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.087129</td>\n",
+       "      <td>-3.901162</td>\n",
+       "      <td>0.832620</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0.778157</td>\n",
+       "      <td>-0.139248</td>\n",
+       "      <td>0.978618</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0.799159</td>\n",
+       "      <td>-0.773318</td>\n",
+       "      <td>0.780529</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>0.118274</td>\n",
+       "      <td>-0.446411</td>\n",
+       "      <td>0.143353</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>0.944669</td>\n",
+       "      <td>-0.650378</td>\n",
+       "      <td>0.414662</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Column1   Column2   Column3\n",
+       "0  0.548814 -0.335208  0.602763\n",
+       "1  0.544883 -0.858836  0.645894\n",
+       "2  0.437587 -0.114544  0.963663\n",
+       "3  0.383442 -0.233541  0.528895\n",
+       "4  0.568045 -0.077317  0.071036\n",
+       "5  0.087129 -3.901162  0.832620\n",
+       "6  0.778157 -0.139248  0.978618\n",
+       "7  0.799159 -0.773318  0.780529\n",
+       "8  0.118274 -0.446411  0.143353\n",
+       "9  0.944669 -0.650378  0.414662"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# scikit-learnによる正規化\n",
+    "# 対数変換の差異と同じDataFrameを用いる\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "5d3684cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.53838236, 0.93255711, 0.5858723 ],\n",
+       "       [0.53379911, 0.79561947, 0.63339497],\n",
+       "       [0.40867839, 0.99026453, 0.98352151],\n",
+       "       [0.34553764, 0.95914469, 0.50448193],\n",
+       "       [0.56080821, 1.        , 0.        ],\n",
+       "       [0.        , 0.        , 0.8391347 ],\n",
+       "       [0.80582569, 0.9838039 , 1.        ],\n",
+       "       [0.83031647, 0.81798397, 0.78173972],\n",
+       "       [0.03631917, 0.90347576, 0.07968118],\n",
+       "       [1.        , 0.85013475, 0.37861678]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 正規化する\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "MinMaxScaler().fit_transform(df)"
    ]
   },
   {
@@ -451,7 +619,60 @@
    "id": "7f24a348",
    "metadata": {},
    "source": [
-    "### 標準化(Z-score normalization)"
+    "### 標準化(Z-score normalization)\n",
+    "\n",
+    "標準化は，標本平均を0，標本標準偏差を1にするように変換する手法である．以下のように，それぞれの値を変換する．\n",
+    "\n",
+    "\\begin{eqnarray}\n",
+    "\\hat{x}_i = \\frac{x_i-\\bar{x}}{\\sigma}\n",
+    "\\end{eqnarray}\n",
+    "\n",
+    "ここで$\\bar{x}$は標本平均，$\\sigma$は標本標準偏差である．この変換により，確かに平均は0で分散は1になるが，標本が標準正規分布に従うようになるわけではないので注意する．\n",
+    "\n",
+    "厳密に言うと標本が正規分布に従う場合に標準化は最も有効である．ただ，データの分布が不明な場合でも，正規化ほど外れ値の影響も少ない等の利点から，標準化の方が用いられる傾向にある．\n",
+    "\n",
+    "標準化も上記の式に沿って直接実装して構わないが，scikit-learnのクラスを用いても良い．"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "9053846a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.10485104,  0.38604226,  0.02196436],\n",
+       "       [ 0.09002614, -0.09779764,  0.16637592],\n",
+       "       [-0.31468685,  0.5899391 ,  1.23033797],\n",
+       "       [-0.51892066,  0.47998379, -0.22536411],\n",
+       "       [ 0.17738926,  0.6243373 , -1.75838021],\n",
+       "       [-1.63658987, -2.90894913,  0.79157635],\n",
+       "       [ 0.96991792,  0.56711185,  1.28041268],\n",
+       "       [ 1.04913531, -0.01877749,  0.61716488],\n",
+       "       [-1.5191126 ,  0.28328952, -1.5162456 ],\n",
+       "       [ 1.5979903 ,  0.09482045, -0.60784223]])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 標準化\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "StandardScaler().fit_transform(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27c76463",
+   "metadata": {},
+   "source": [
+    "## 交互作用特徴量\n",
+    "---"
    ]
   },
   {
