(2022/03/26)数値データの特徴量化(交互作用特徴量の生成)について理解する

--- a/FeatureValueConversion.ipynb
+++ b/FeatureValueConversion.ipynb
@@ -5,7 +5,7 @@
    "id": "20af2eb4",
    "metadata": {},
    "source": [
-    "# 数値データの特徴量化(二値化/離散化，対数変換，スケーリング/正規化，交互作用特徴量の生成等)について理解する(2022/03/22)\n",
+    "# 数値データの特徴量化(二値化/離散化，対数変換，スケーリング/正規化，交互作用特徴量の生成等)について理解する(2022/03/22-26)\n",
     "---\n",
     "\n",
     "## 概要\n",
@@ -81,7 +81,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fefd00cefd0>"
+       "<matplotlib.image.AxesImage at 0x7f8e99000ee0>"
       ]
      },
      "execution_count": 2,
@@ -116,7 +116,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fefcc0689d0>"
+       "<matplotlib.image.AxesImage at 0x7f8e94f988e0>"
       ]
      },
      "execution_count": 3,
@@ -672,7 +672,15 @@
    "metadata": {},
    "source": [
     "## 交互作用特徴量\n",
-    "---"
+    "---\n",
+    "\n",
+    "交互作用特徴量は特徴量同士を掛け合わせることによって生み出される特徴量のことである．その名にあるように，説明変数同士が相互に影響している場合というのは少なくない．\n",
+    "\n",
+    "例えば，種子の収量を目的変数として，土壌と肥料の種類を説明変数とすれば，説明変数同士は相互に影響する可能性がある．言い換えると，土壌と肥料それぞれの効果だけでなく，土壌と肥料の「相性」によって種子の収量が変化するということである．\n",
+    "\n",
+    "どの変数同士が交互作用しているか判定するために，F統計量を使う方法やH統計量を使う方法(こちらはマイナー？)が提案されている．\n",
+    "\n",
+    "$n$個の説明変数がある場合，それらの交互作用特徴量は$n^2$の組み合わせが考えられる．そのため注意点として，計算量の増加やモデル解釈が困難になるといった点がある．機械学習モデルにどのような特徴量を与えるかというのは「特徴量エンジニアリング」という一分野になっているから，どの特徴量を使用するかが腕の見せ所かもしれない．"
    ]
   },
   {
@@ -723,7 +731,15 @@
     "\n",
     "[sklearn.preprocessing.MinMaxScaler，scikit-learn 1.0.2 documentaiton](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.MinMaxScaler.html)\n",
     "\n",
-    "[sklearn.preprocessing.StandardScaler，scikit-learn 1.0.2 documentaiton](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.StandardScaler.html)"
+    "[sklearn.preprocessing.StandardScaler，scikit-learn 1.0.2 documentaiton](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.StandardScaler.html)\n",
+    "\n",
+    "[30-3. 二元配置分散分析の分散分析表3，統計WEB](https://bellcurve.jp/statistics/course/10088.html)\n",
+    "\n",
+    "[30-4. 交互作用とは，統計WEB](https://bellcurve.jp/statistics/course/10090.html)\n",
+    "\n",
+    "[5.4 特徴量の相互作用，Interpretable Machine Learning A Guide for Making Black Box Models Explainable.](https://hacarus.github.io/interpretable-ml-book-ja/interaction.html)\n",
+    "\n",
+    "[変数重要度とPartial Dependence Plotで機械学習モデルを解釈する，Dropout](https://dropout009.hatenablog.com/entry/2019/01/07/124214)"
    ]
   }
  ],
